# LessonsNotificationAlarmZP_bot

./: .gitignore  CMakeLists.txt  README.md
src/: 1main.cpp  1main.cpps  bot.db  main.cpp
src/objects/: Day.cpp  Day.hpp  Lesson.cpp  Lesson.hpp  Week.cpp  Week.hpp
